# clickutils

./: GEMINI.md  README.md  Tasks.md  ToDo.md  archive_file.py  pyproject.toml  rename_task.py
samples/: sample1-simple.py  sample2-arg-opt.py  sample3-subs.py  sample4-async.py
src/click_utils/: __init__.py  __main__.py  click_utils.py
src/clickutils/: __init__.py  __main__.py  clickutils.py  version.py
tests/: test_archive_file.py
