[project]
name = "click-utils"
dynamic = ["version"]
description = "utilities for `click`"
readme = "README.md"
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pyright>=1.1.405",
    "ruff>=0.13.0",
]

[project.scripts]
click_utils = "click_utils.__main__:cli"
